--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
     <script type="text/javascript" src="https://cdn.ethers.io/scripts/ethers-app-v0.2.min.js"></script>
     <script>
       ethers.onready = function() {
+        console.log("onready")
         updateBlocks();
-      }
+        getContractValue();
+      };
 
       function updateBlocks() {
         var lastBlockNumber = ethers.blockchain.getBlockNumber();
         lastBlockNumber.then(function(number) {
-          console.log("number", number);
+          console.log("number" + number);
           for (var i = 0; i < 10; i++) {
             ethers.blockchain.getBlock(number - i).then(function(block) {
               printBlock(block);
@@ -38,6 +40,17 @@
         cell1.innerHTML = block.number;
         cell2.innerHTML = block.hash;
         cell3.innerHTML = block.timestamp;
+      }
+
+      function getContractValue() {
+        var contractAddress = "0x954De93D9f1Cd1e2e3AE5964F614CDcc821Fac64";
+        var contractABI = [{"constant":true,"inputs":[],"name":"getValue","outputs":[{"name":"","type":"string"}],"type":"function"},{"constant":false,"inputs":[{"name":"value","type":"string"}],"name":"setValue","outputs":[],"type":"function"},{"anonymous":false,"inputs":[{"indexed":false,"name":"oldValue","type":"string"},{"indexed":false,"name":"newValue","type":"string"}],"name":"valueChanged","type":"event"}];
+
+        var contract = ethers.getContract(contractAddress, contractABI);
+
+        contract.getValue().then(function(results) {
+          console.log("getValue() returned " + result[0]);
+        });
       }
     
     </script>
